// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test users reducer should get message about a problem with authentication 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "buildings": Array [],
  "errorMessage": undefined,
  "units": Array [],
}
`;

exports[`test users reducer should get message about buildings list's not finding 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "buildings": Array [],
  "errorMessage": undefined,
  "units": Array [],
}
`;

exports[`test users reducer should get message about units list's not finding 1`] = `
Object {
  "0": "W",
  "1": "a",
  "10": "o",
  "11": "m",
  "12": "o",
  "13": "ś",
  "14": "ć",
  "15": " ",
  "16": "z",
  "17": " ",
  "18": "s",
  "19": "e",
  "2": "ż",
  "20": "r",
  "21": "w",
  "22": "e",
  "23": "r",
  "24": "a",
  "25": "!",
  "3": "n",
  "4": "a",
  "5": " ",
  "6": "w",
  "7": "i",
  "8": "a",
  "9": "d",
  "buildings": Array [],
  "errorMessage": undefined,
  "units": Array [],
}
`;

exports[`test users reducer should load buildings list 1`] = `
Object {
  "0": Object {
    "_id": "1111-2222-3333-4444",
    "cost": "1488 gold",
    "hp": "500",
    "name": "Hobok",
    "worker": "tester",
  },
  "buildings": undefined,
  "errorMessage": "",
  "units": Array [],
}
`;

exports[`test users reducer should load units list 1`] = `
Object {
  "0": Object {
    "_id": "1111-2222-3333-4444",
    "cost": "1488 gold",
    "hp": "500",
    "name": "Hobok",
    "worker": "tester",
  },
  "buildings": Array [],
  "errorMessage": "",
  "units": undefined,
}
`;
